Help udpate Nov 19

--- a/deploy/runtime/help/html/choose_models.htm
+++ b/deploy/runtime/help/html/choose_models.htm
@@ -46,7 +46,7 @@
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Identifying the Models for a Case</span></h3>
 <p class="p_Text"><span class="f_Text">When SAM displays the case, you can verify that the performance and financial model are correct on the Main Window:</span></p>
 <p class="p_Text"><img src="ss_mainwindow-fintech.gif" width="498" height="175" alt="SS_MainWindow-FinTech" style="width:498px;height:175px;border:none" /></p>
-<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Changing a Case's Models</span></h3>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><a id="changemodel"></a><span class="f_Heading3_atocs_">Changing a Case's Models</span></h3>
 <p class="p_Text"><span class="f_Text">To change the performance model or financial model for an existing case, on the case's menu, click </span><span class="f_CHInterfaceElement">Change model</span><span class="f_Text">:</span></p>
 <p class="p_Text"><img src="ss_casemenu-changemodel.gif" width="324" height="306" alt="SS_CaseMenu-ChangeModel" style="width:324px;height:306px;border:none" /></p>
 
