--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -108,7 +108,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i3" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a3" href="reference.htm" target="hmcontent"><span class="heading1" id="s3" ondblclick="return dblclicked(this)">Reference</span></a>
+<li class="heading1" id="i3" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a3" href=javascript:void(0);><span class="heading1" id="s3" ondblclick="return dblclicked(this)">Reference</span></a>
 <ul id="ul3" style="list-style-type:none">
 <li class="heading2" id="i3.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.1" href="menus.htm" target="hmcontent"><span class="heading2" id="s3.1">Start Menu</span></a>
 </li>
@@ -122,25 +122,27 @@
 </li>
 <li class="heading2" id="i3.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.6" href="inputs_browser.htm" target="hmcontent"><span class="heading2" id="s3.6">Inputs Browser</span></a>
 </li>
-<li class="heading2" id="i3.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.7" href="edit_schedule.htm" target="hmcontent"><span class="heading2" id="s3.7">Annual Schedules</span></a>
+<li class="heading2" id="i3.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.7" href="time_series_viewer.htm" target="hmcontent"><span class="heading2" id="s3.7">Time Series Data Viewer</span></a>
 </li>
-<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="notes.htm" target="hmcontent"><span class="heading2" id="s3.8">Notes</span></a>
+<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="edit_schedule.htm" target="hmcontent"><span class="heading2" id="s3.8">Annual Schedules</span></a>
 </li>
-<li class="heading2" id="i3.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.9" href="excel_exchange.htm" target="hmcontent"><span class="heading2" id="s3.9">Excel Exchange</span></a>
+<li class="heading2" id="i3.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.9" href="notes.htm" target="hmcontent"><span class="heading2" id="s3.9">Notes</span></a>
 </li>
-<li class="heading2" id="i3.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.10" href="libraries.htm" target="hmcontent"><span class="heading2" id="s3.10">Libraries</span></a>
+<li class="heading2" id="i3.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.10" href="excel_exchange.htm" target="hmcontent"><span class="heading2" id="s3.10">Excel Exchange</span></a>
 </li>
-<li class="heading2" id="i3.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.11" href="macros.htm" target="hmcontent"><span class="heading2" id="s3.11">Macros and Scripting</span></a>
+<li class="heading2" id="i3.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.11" href="libraries.htm" target="hmcontent"><span class="heading2" id="s3.11">Libraries</span></a>
 </li>
-<li class="heading2" id="i3.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.12" href="sdk.htm" target="hmcontent"><span class="heading2" id="s3.12">Software Development Kit</span></a>
+<li class="heading2" id="i3.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.12" href="macros.htm" target="hmcontent"><span class="heading2" id="s3.12">Macros and Scripting</span></a>
 </li>
-<li class="heading2" id="i3.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.13" href="file_formats.htm" target="hmcontent"><span class="heading2" id="s3.13">File Formats</span></a>
+<li class="heading2" id="i3.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.13" href="sdk.htm" target="hmcontent"><span class="heading2" id="s3.13">Software Development Kit</span></a>
 </li>
-<li class="heading2" id="i3.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.14" href="installation.htm" target="hmcontent"><span class="heading2" id="s3.14">Software Installation</span></a>
+<li class="heading2" id="i3.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.14" href="file_formats.htm" target="hmcontent"><span class="heading2" id="s3.14">File Formats</span></a>
 </li>
-<li class="heading2" id="i3.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.15" href="registration.htm" target="hmcontent"><span class="heading2" id="s3.15">Registration</span></a>
+<li class="heading2" id="i3.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.15" href="installation.htm" target="hmcontent"><span class="heading2" id="s3.15">Software Installation</span></a>
 </li>
-<li class="heading2" id="i3.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.16" href="configure_proxy_server.htm" target="hmcontent"><span class="heading2" id="s3.16">Web Access and Proxies</span></a>
+<li class="heading2" id="i3.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.16" href="registration.htm" target="hmcontent"><span class="heading2" id="s3.16">Registration</span></a>
+</li>
+<li class="heading2" id="i3.17" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.17" href="configure_proxy_server.htm" target="hmcontent"><span class="heading2" id="s3.17">Web Access and Proxies</span></a>
 </li>
 </ul>
 </li>
@@ -160,17 +162,15 @@
 <ul id="ul5" style="list-style-type:none">
 <li class="heading2" id="i5.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.1" href="weather_manage_folders.htm" target="hmcontent"><span class="heading2" id="s5.1">Weather Files and Libraries</span></a>
 </li>
-<li class="heading2" id="i5.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.2" href="weather_viewer.htm" target="hmcontent"><span class="heading2" id="s5.2">Weather Data Viewer</span></a>
+<li class="heading2" id="i5.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.2" href="download_weather_file.htm" target="hmcontent"><span class="heading2" id="s5.2">Download Weather File</span></a>
 </li>
-<li class="heading2" id="i5.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.3" href="download_weather_file.htm" target="hmcontent"><span class="heading2" id="s5.3">Download Weather File</span></a>
+<li class="heading2" id="i5.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.3" href="weather_format.htm" target="hmcontent"><span class="heading2" id="s5.3">Weather File Formats</span></a>
 </li>
-<li class="heading2" id="i5.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.4" href="weather_format.htm" target="hmcontent"><span class="heading2" id="s5.4">Weather File Formats</span></a>
+<li class="heading2" id="i5.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.4" href="weather_data_elements.htm" target="hmcontent"><span class="heading2" id="s5.4">Weather Data Elements</span></a>
 </li>
-<li class="heading2" id="i5.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.5" href="weather_data_elements.htm" target="hmcontent"><span class="heading2" id="s5.5">Weather Data Elements</span></a>
+<li class="heading2" id="i5.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.5" href="weather_typical_single.htm" target="hmcontent"><span class="heading2" id="s5.5">Typical Year and Single Year Data</span></a>
 </li>
-<li class="heading2" id="i5.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.6" href="weather_typical_single.htm" target="hmcontent"><span class="heading2" id="s5.6">Typical Year and Single Year Data</span></a>
-</li>
-<li class="heading2" id="i5.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.7" href="weather_time_convention.htm" target="hmcontent"><span class="heading2" id="s5.7">Time Convention and Sun Position</span></a>
+<li class="heading2" id="i5.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.6" href="weather_time_convention.htm" target="hmcontent"><span class="heading2" id="s5.6">Time Convention and Sun Position</span></a>
 </li>
 </ul>
 </li>
