Help update Nov 21

--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -124,7 +124,7 @@
 </li>
 <li class="heading2" id="i3.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.7" href="time_series_viewer.htm" target="hmcontent"><span class="heading2" id="s3.7">Time Series Data Viewer</span></a>
 </li>
-<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="edit_schedule.htm" target="hmcontent"><span class="heading2" id="s3.8">Annual Schedules</span></a>
+<li class="heading2" id="i3.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.8" href="edit_schedule.htm" target="hmcontent"><span class="heading2" id="s3.8">Edit Schedule</span></a>
 </li>
 <li class="heading2" id="i3.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a3.9" href="notes.htm" target="hmcontent"><span class="heading2" id="s3.9">Notes</span></a>
 </li>
@@ -180,45 +180,43 @@
 </li>
 <li class="heading2" id="i6.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.2" href="pv_system_costs.htm" target="hmcontent"><span class="heading2" id="s6.2">PV System Costs</span></a>
 </li>
-<li class="heading2" id="i6.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.3" href="shade_calculator.htm" target="hmcontent"><span class="heading2" id="s6.3">Shade Calculator</span></a>
+<li class="heading2" id="i6.3" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.3" href="detailed_photovoltaic_model.htm" target="hmcontent"><span class="heading2" id="s6.3" ondblclick="return dblclicked(this)">Detailed Photovoltaic Model</span></a>
+<ul id="ul6.3" style="list-style-type:none">
+<li class="heading3" id="i6.3.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.1" href="pv_module.htm" target="hmcontent"><span class="heading3" id="s6.3.1">Module</span></a>
 </li>
-<li class="heading2" id="i6.4" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.4" href="detailed_photovoltaic_model.htm" target="hmcontent"><span class="heading2" id="s6.4" ondblclick="return dblclicked(this)">Detailed Photovoltaic Model</span></a>
+<li class="heading3" id="i6.3.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.2" href="pv_inverter.htm" target="hmcontent"><span class="heading3" id="s6.3.2">Inverter</span></a>
+</li>
+<li class="heading3" id="i6.3.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.3" href="pv_system_design.htm" target="hmcontent"><span class="heading3" id="s6.3.3">System Design</span></a>
+</li>
+<li class="heading3" id="i6.3.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.4" href="pv_shading.htm" target="hmcontent"><span class="heading3" id="s6.3.4">Shading</span></a>
+</li>
+<li class="heading3" id="i6.3.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.5" href="pv_losses.htm" target="hmcontent"><span class="heading3" id="s6.3.5">Losses</span></a>
+</li>
+<li class="heading3" id="i6.3.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.3.6" href="pv_results.htm" target="hmcontent"><span class="heading3" id="s6.3.6">Results</span></a>
+</li>
+</ul>
+</li>
+<li class="heading2" id="i6.4" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.4" href="pvwatts.htm" target="hmcontent"><span class="heading2" id="s6.4" ondblclick="return dblclicked(this)">PVWatts Model</span></a>
 <ul id="ul6.4" style="list-style-type:none">
-<li class="heading3" id="i6.4.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.1" href="pv_module.htm" target="hmcontent"><span class="heading3" id="s6.4.1">Module</span></a>
+<li class="heading3" id="i6.4.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.1" href="pvwatts_system_design.htm" target="hmcontent"><span class="heading3" id="s6.4.1">System Design</span></a>
 </li>
-<li class="heading3" id="i6.4.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.2" href="pv_inverter.htm" target="hmcontent"><span class="heading3" id="s6.4.2">Inverter</span></a>
-</li>
-<li class="heading3" id="i6.4.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.3" href="pv_system_design.htm" target="hmcontent"><span class="heading3" id="s6.4.3">System Design</span></a>
-</li>
-<li class="heading3" id="i6.4.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.4" href="pv_shading.htm" target="hmcontent"><span class="heading3" id="s6.4.4">Shading</span></a>
-</li>
-<li class="heading3" id="i6.4.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.5" href="pv_losses.htm" target="hmcontent"><span class="heading3" id="s6.4.5">Losses</span></a>
-</li>
-<li class="heading3" id="i6.4.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.6" href="pv_results.htm" target="hmcontent"><span class="heading3" id="s6.4.6">Results</span></a>
+<li class="heading3" id="i6.4.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.2" href="pvwatts_results.htm" target="hmcontent"><span class="heading3" id="s6.4.2">Results</span></a>
 </li>
 </ul>
 </li>
-<li class="heading2" id="i6.5" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.5" href="pvwatts.htm" target="hmcontent"><span class="heading2" id="s6.5" ondblclick="return dblclicked(this)">PVWatts Model</span></a>
+<li class="heading2" id="i6.5" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.5" href="pvhcpv_high-x_concentrating_pv_hcpv.htm" target="hmcontent"><span class="heading2" id="s6.5" ondblclick="return dblclicked(this)">Concentrating Photovoltaic</span></a>
 <ul id="ul6.5" style="list-style-type:none">
-<li class="heading3" id="i6.5.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.1" href="pvwatts_system_design.htm" target="hmcontent"><span class="heading3" id="s6.5.1">System Design</span></a>
+<li class="heading3" id="i6.5.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.1" href="hcpv_location_and_resource.htm" target="hmcontent"><span class="heading3" id="s6.5.1">Location and Resource</span></a>
 </li>
-<li class="heading3" id="i6.5.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.2" href="pvwatts_results.htm" target="hmcontent"><span class="heading3" id="s6.5.2">Results</span></a>
+<li class="heading3" id="i6.5.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.2" href="hcpv_module.htm" target="hmcontent"><span class="heading3" id="s6.5.2">Module</span></a>
 </li>
-</ul>
+<li class="heading3" id="i6.5.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.3" href="hcpv_inverter.htm" target="hmcontent"><span class="heading3" id="s6.5.3">Inverter</span></a>
 </li>
-<li class="heading2" id="i6.6" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.6" href="pvhcpv_high-x_concentrating_pv_hcpv.htm" target="hmcontent"><span class="heading2" id="s6.6" ondblclick="return dblclicked(this)">Concentrating Photovoltaic</span></a>
-<ul id="ul6.6" style="list-style-type:none">
-<li class="heading3" id="i6.6.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.1" href="hcpv_location_and_resource.htm" target="hmcontent"><span class="heading3" id="s6.6.1">Location and Resource</span></a>
+<li class="heading3" id="i6.5.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.4" href="hcpv_array.htm" target="hmcontent"><span class="heading3" id="s6.5.4">Array</span></a>
 </li>
-<li class="heading3" id="i6.6.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.2" href="hcpv_module.htm" target="hmcontent"><span class="heading3" id="s6.6.2">Module</span></a>
+<li class="heading3" id="i6.5.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.5" href="hcpv_system_costs.htm" target="hmcontent"><span class="heading3" id="s6.5.5">System Costs</span></a>
 </li>
-<li class="heading3" id="i6.6.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.3" href="hcpv_inverter.htm" target="hmcontent"><span class="heading3" id="s6.6.3">Inverter</span></a>
-</li>
-<li class="heading3" id="i6.6.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.4" href="hcpv_array.htm" target="hmcontent"><span class="heading3" id="s6.6.4">Array</span></a>
-</li>
-<li class="heading3" id="i6.6.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.5" href="hcpv_system_costs.htm" target="hmcontent"><span class="heading3" id="s6.6.5">System Costs</span></a>
-</li>
-<li class="heading3" id="i6.6.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.6.6" href="pm_high-x_concentrating_pv.htm" target="hmcontent"><span class="heading3" id="s6.6.6">HCPV Results</span></a>
+<li class="heading3" id="i6.5.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.5.6" href="pm_high-x_concentrating_pv.htm" target="hmcontent"><span class="heading3" id="s6.5.6">HCPV Results</span></a>
 </li>
 </ul>
 </li>
@@ -578,7 +576,69 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i26" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="references.htm" target="hmcontent"><span class="heading1" id="s26">Bibliography</span></a>
+<li class="heading1" id="i26" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="shade_calculator.htm" target="hmcontent"><span class="heading1" id="s26" ondblclick="return dblclicked(this)">3D Shade Calculator</span></a>
+<ul id="ul26" style="list-style-type:none">
+<li class="heading2" id="i26.1" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.1" href="how-to.htm" target="hmcontent"><span class="heading2" id="s26.1" ondblclick="return dblclicked(this)">How-To</span></a>
+<ul id="ul26.1" style="list-style-type:none">
+<li class="heading3" id="i26.1.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.1" href="define-location.htm" target="hmcontent"><span class="heading3" id="s26.1.1">Define the scene location</span></a>
+</li>
+<li class="heading3" id="i26.1.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.2" href="underlay.htm" target="hmcontent"><span class="heading3" id="s26.1.2">Use an image underlay</span></a>
+</li>
+<li class="heading3" id="i26.1.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.3" href="shading-objects.htm" target="hmcontent"><span class="heading3" id="s26.1.3">Add shading objects</span></a>
+</li>
+<li class="heading3" id="i26.1.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.4" href="active-surface.htm" target="hmcontent"><span class="heading3" id="s26.1.4">Add active surface objects</span></a>
+</li>
+<li class="heading3" id="i26.1.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.5" href="change-view.htm" target="hmcontent"><span class="heading3" id="s26.1.5">Change the view</span></a>
+</li>
+<li class="heading3" id="i26.1.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.6" href="zoom-pan.htm" target="hmcontent"><span class="heading3" id="s26.1.6">Zoom and pan the scene</span></a>
+</li>
+<li class="heading3" id="i26.1.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.7" href="select.htm" target="hmcontent"><span class="heading3" id="s26.1.7">Select an object</span></a>
+</li>
+<li class="heading3" id="i26.1.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.8" href="move.htm" target="hmcontent"><span class="heading3" id="s26.1.8">Move objects</span></a>
+</li>
+<li class="heading3" id="i26.1.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.9" href="resize.htm" target="hmcontent"><span class="heading3" id="s26.1.9">Resize objects</span></a>
+</li>
+<li class="heading3" id="i26.1.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.10" href="rotate.htm" target="hmcontent"><span class="heading3" id="s26.1.10">Rotate objects</span></a>
+</li>
+<li class="heading3" id="i26.1.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.11" href="delete.htm" target="hmcontent"><span class="heading3" id="s26.1.11">Delete and copy objects</span></a>
+</li>
+<li class="heading3" id="i26.1.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.12" href="colors.htm" target="hmcontent"><span class="heading3" id="s26.1.12">Change object colors</span></a>
+</li>
+<li class="heading3" id="i26.1.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.13" href="generate-data.htm" target="hmcontent"><span class="heading3" id="s26.1.13">Generate shading data</span></a>
+</li>
+<li class="heading3" id="i26.1.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.14" href="export.htm" target="hmcontent"><span class="heading3" id="s26.1.14">Export shade data</span></a>
+</li>
+<li class="heading3" id="i26.1.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.15" href="sam.htm" target="hmcontent"><span class="heading3" id="s26.1.15">Use shade data in SAM</span></a>
+</li>
+<li class="heading3" id="i26.1.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.16" href="proxy.htm" target="hmcontent"><span class="heading3" id="s26.1.16">Configure proxy server</span></a>
+</li>
+</ul>
+</li>
+<li class="heading2" id="i26.2" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.2" href="reference.htm" target="hmcontent"><span class="heading2" id="s26.2" ondblclick="return dblclicked(this)">Reference</span></a>
+<ul id="ul26.2" style="list-style-type:none">
+<li class="heading3" id="i26.2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.1" href="open-save.htm" target="hmcontent"><span class="heading3" id="s26.2.1">Open and Save</span></a>
+</li>
+<li class="heading3" id="i26.2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.2" href="location.htm" target="hmcontent"><span class="heading3" id="s26.2.2">Location</span></a>
+</li>
+<li class="heading3" id="i26.2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.3" href="create.htm" target="hmcontent"><span class="heading3" id="s26.2.3">Create (Shape Reference)</span></a>
+</li>
+<li class="heading3" id="i26.2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.4" href="3d-scene.htm" target="hmcontent"><span class="heading3" id="s26.2.4">3D Scene</span></a>
+</li>
+<li class="heading3" id="i26.2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.5" href="birds-eye.htm" target="hmcontent"><span class="heading3" id="s26.2.5">Bird's Eye</span></a>
+</li>
+<li class="heading3" id="i26.2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.6" href="elevations.htm" target="hmcontent"><span class="heading3" id="s26.2.6">Elevations</span></a>
+</li>
+<li class="heading3" id="i26.2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.7" href="analyze.htm" target="hmcontent"><span class="heading3" id="s26.2.7">Analyze</span></a>
+</li>
+<li class="heading3" id="i26.2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.8" href="shortcuts.htm" target="hmcontent"><span class="heading3" id="s26.2.8">Shortcuts</span></a>
+</li>
+<li class="heading3" id="i26.2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.9" href="file-types.htm" target="hmcontent"><span class="heading3" id="s26.2.9">File Types</span></a>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li class="heading1" id="i27" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a27" href="references.htm" target="hmcontent"><span class="heading1" id="s27">Bibliography</span></a>
 </li>
 </ul>
 <script type="text/javascript">loadicons();</script>
